<package>
    <name>env_model_msgs</name>
    <version>1.14.4</version>
    <description>

        map_server provides the <tt>map_server</tt> ROS <a href="http://www.ros.org/wiki/Nodes">Node</a>, which offers map data as a ROS <a href="http://www.ros.org/wiki/Services">Service</a>. It also provides the <tt>map_saver</tt> command-line utility, which allows dynamically generated maps to be saved to file.

    </description>
    <author>Brian Gerkey, Tony Pratkanis</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
    <maintainer email="ahoy@fetchrobotics.com">Aaron Hoy</maintainer>
    <url>http://wiki.ros.org/map_server</url>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>message_runtime</build_depend>	
	<build_depend>std_msgs</build_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>


</package>
